--- a/cnvrg/application.yaml
+++ b/cnvrg/application.yaml
@@ -12,7 +12,7 @@ spec:
     helm:
       releaseName: cnvrg
       valueFiles:
-        - cnvrg/values.yaml
+        - cnvrg/cnvrg-values.yaml
   destination:
     server: "https://kubernetes.default.svc"
     namespace: cnvrg
