added create namespace sync

--- a/cnvrg/application.yaml
+++ b/cnvrg/application.yaml
@@ -16,3 +16,6 @@ spec:
   destination:
     server: "https://kubernetes.default.svc"
     namespace: cnvrg
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
