--- a/cnvrg/application.yaml
+++ b/cnvrg/application.yaml
@@ -12,9 +12,10 @@ spec:
       helm:
         releaseName: cnvrg
         valueFiles:
-          - $values/cnvrg/values.yaml
+          - $values/values.yaml
     - repoURL: https://github.com/dilerous/argocd.git
       ref: values
+      targetRevision: main
   destination:
     server: "https://kubernetes.default.svc"
     namespace: cnvrg
