--- a/cnvrg/application.yaml
+++ b/cnvrg/application.yaml
@@ -5,17 +5,14 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  sources:
-    - chart: cnvrg
-      repoURL: https://charts.v3.cnvrg.io
-      targetRevision: 4.3.30
-      helm:
-        releaseName: cnvrg
-        valueFiles:
-          - https://raw.githubusercontent.com/dilerous/argocd/main/cnvrg/values.yaml
-    - repoURL: https://github.com/dilerous/argocd.git
-      targetRevision: main
-      path: cnvrg
+  source:
+    chart: cnvrg
+    repoURL: https://charts.v3.cnvrg.io
+    targetRevision: 4.3.30
+    helm:
+      releaseName: cnvrg
+      valueFiles:
+        - https://raw.githubusercontent.com/dilerous/argocd/main/cnvrg/values.yaml
   destination:
     server: "https://kubernetes.default.svc"
     namespace: cnvrg
